Update to Java+JDK 19 [...]
Nothing too complicated here, just needed some Google-Fu. Also added Gradle project.

References:
https://github.com/openjdk/panama-foreign/pull/576
https://stackoverflow.com/questions/71729585/clinker-tocstring-replacement-in-java-18
https://bugs.openjdk.org/browse/JDK-8264434?jql=text%20~%20%22ResourceScope%22